--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
 
   <body>
-    <h1 class="book_title">Lisp Chronicles</h1>
 
-    <p class="firstslogan">
+     <p class="firstslogan"><span class="big">Lisp Chronicles</span>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="about.html" class="mainlink">About</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="https://twitter.com/lispchronicles" target="_blank" class="mainlink">Twitter</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </p>
