--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 
   <body>
 
-     <p class="firstslogan"><span class="big">Lisp Chronicles</span>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="about.html" class="mainlink">About</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="https://twitter.com/lispchronicles" target="_blank" class="mainlink">Twitter</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+     <p class="firstslogan"><span class="big">Lisp Chronicles</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="about.html" class="mainlink">About</a>&nbsp;&nbsp;&nbsp;
+    <a href="https://twitter.com/lispchronicles" target="_blank" class="mainlink">Twitter</a>&nbsp;&nbsp;&nbsp;
+    <a href="http://schemer.in" class="mainlink">schemer.in</a>&nbsp;&nbsp;&nbsp;
       </p>
+
+     <p>
 
     <p>
       <ul>
