--- a/bits.html
+++ b/bits.html
@@ -371,7 +371,7 @@
       cover this topic well.</p>
     
     <h3>Download</h3>
-    <p>Source code for the <a href="http://schemer.in/code/bit-stream.tar.gz">bit-stream library</a>.</p>
+    <p>Source code for the <a href="code/bit-stream.tar.gz">bit-stream library</a>.</p>
 
     <hr></hr>
     <p align="left">
