more posts moved to new template

--- a/bits.html
+++ b/bits.html
@@ -10,7 +10,7 @@
 
     <h1>Bits of Things</h1>
 
-    <p class="published">2017-April-04<p>
+    <p class="published">2017-April-04</p>
       
     <p>Most programming languages provide I/O facilities over streams of bytes. For instance, the Java abstract
       classes <em><a href="https://docs.oracle.com/javase/7/docs/api/java/io/InputStream.html" target="_blank">java.io.InputStream</a></em>
