--- a/heap.html
+++ b/heap.html
@@ -10,7 +10,7 @@
 
     <h1>A Heap for Proletarians</h1>
 
-    <p class="published">2017-June-22<p>
+    <p class="published">2017-June-22</p>
       
     <p>Hash tables and arrays typically support efficient access to arbitrary elements.
       What if we need efficient access to elements based on some priority? Say for example, we need to fetch
