--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <p>
       <ul>
         <li class="section"><a href="heap.html">A Heap for Proletarians</a> <span class="published">2017-June-22</span></li>
-        <li class="section"><a href="bits.html">Bits of Things</a> <span class="published">2017-April-04</span></li>        
+        <li class="section"><a href="bits.html">Bits of Things</a> <span class="published">2017-April-04</span></li>
+        <li class="section"><a href="truth.html">The Truth About Nothing</a> <span class="published">2017-March-16</span></li>
+	<li class="section"><a href="syn.html">Syntactic Abstractions</a> <span class="published">2017-February-22</span></li>
       </ul>
     </p>
 
