--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li class="section"><a href="bits.html">Bits of Things</a> <span class="published">2017-April-04</span></li>
         <li class="section"><a href="truth.html">The Truth About Nothing</a> <span class="published">2017-March-16</span></li>
 	<li class="section"><a href="syn.html">Syntactic Abstractions</a> <span class="published">2017-February-22</span></li>
+	<li class="section"><a href="func.html">Functional Abstractions</a> <span class="published">2017-February-10</span></li>	
       </ul>
     </p>
 
