fixed top links

--- a/bits.html
+++ b/bits.html
@@ -8,8 +8,11 @@
 
   <body>
 
-    <h1>Bits of Things</h1>
-
+    <p class="blogtitle"><span class="blogheader">Bits of Things</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;
+      <a href="https://twitter.com/lispchronicles" target="_blank">Twitter</a>&nbsp;&nbsp;&nbsp;
+      <a href="http://schemer.in" target="_blank">schemer.in</a>&nbsp;&nbsp;&nbsp;
+    </p>
     <p class="published">2017-April-04</p>
       
     <p>Most programming languages provide I/O facilities over streams of bytes. For instance, the Java abstract
