--- a/func.html
+++ b/func.html
@@ -8,8 +8,11 @@
 
   <body>
 
-    <h1>Functional Abstractions</h1>
-
+    <p class="blogtitle"><span class="blogheader">Functional Abstractions</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;
+      <a href="https://twitter.com/lispchronicles" target="_blank">Twitter</a>&nbsp;&nbsp;&nbsp;
+      <a href="http://schemer.in" target="_blank">schemer.in</a>&nbsp;&nbsp;&nbsp;
+    </p>
     <p class="published">2017-February-10</p>
     
     <p>Lisp is the earliest programming language to treat functions as first class entities. Functions in Lisp have the same status as other types of data like strings and numbers &ndash;
