--- a/syn.html
+++ b/syn.html
@@ -8,8 +8,11 @@
 
   <body>
 
-    <h1>Syntactic Abstractions</h1>
-
+    <p class="blogtitle"><span class="blogheader">Syntactic Abstractions</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;
+      <a href="https://twitter.com/lispchronicles" target="_blank">Twitter</a>&nbsp;&nbsp;&nbsp;
+      <a href="http://schemer.in" target="_blank">schemer.in</a>&nbsp;&nbsp;&nbsp;
+    </p>
     <p class="published">2017-February-22</p>
 
     <p>The <a href="./func.html">previous post</a> explained higher-order functions and the abstractions they enable us to build. The programming techniques we discussed there can be applied
