--- a/truth.html
+++ b/truth.html
@@ -8,7 +8,11 @@
 
   <body>
 
-    <h1>The Truth About Nothing</h1>
+    <p class="blogtitle"><span class="blogheader">The Truth About Nothing</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;
+      <a href="https://twitter.com/lispchronicles" target="_blank">Twitter</a>&nbsp;&nbsp;&nbsp;
+      <a href="http://schemer.in" target="_blank">schemer.in</a>&nbsp;&nbsp;&nbsp;
+    </p>
 
     <p class="published">2017-March-16</p>
 
