site icon added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./style.css" type="text/css" />
     <title>Lisp Chronicles</title>
+    
+    <link rel="icon" href="img/lc32.jpg" sizes="32x32" />
+    <link rel="icon" href="img/lc192.jpg" sizes="192x192" />
+    <link rel="apple-touch-icon-precomposed" href="img/lc180.jpg" />
+    
   </head>
 
   <body>
