edits required for publishing

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
     <p>
       <ul>
+        <li class="section"><a href="shortn.html">A Clojure Web Service, In An Uncommon Way</a>
+          <span class="published">2018-February-10</span></li>
         <li class="section"><a href="heap.html">A Heap for Proletarians</a> <span class="published">2017-June-22</span></li>
         <li class="section"><a href="bits.html">Bits of Things</a> <span class="published">2017-April-04</span></li>
         <li class="section"><a href="truth.html">The Truth About Nothing</a> <span class="published">2017-March-16</span></li>
