minor case updates

--- a/shortn.html
+++ b/shortn.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./style.css" type="text/css" />
-    <title>Lisp Chronicles/A Clojure Web Service, In An Uncommon Way</title>
+    <title>Lisp Chronicles/A Clojure Web Service, in an Uncommon Way</title>
 
     <link rel="icon" href="img/lc32.jpg" sizes="32x32" />
     <link rel="icon" href="img/lc192.jpg" sizes="192x192" />
@@ -13,7 +13,7 @@
 
   <body>
 
-    <p class="blogtitle"><span class="blogheader">A Clojure Web Service, In An Uncommon Way</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <p class="blogtitle"><span class="blogheader">A Clojure Web Service, in an Uncommon Way</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;
       <a href="https://twitter.com/lispchronicles" target="_blank">Twitter</a>&nbsp;&nbsp;&nbsp;
       <a href="http://schemer.in" target="_blank">schemer.in</a>&nbsp;&nbsp;&nbsp;
