--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
     <p>
       <ul>
+        <li class="section"><a href="scm.html">An Etude in Minimalism</a>
+          <span class="published">2018-November-16</span></li>
         <li class="section"><a href="shortn.html">A URL Shortening Service</a>
           <span class="published">2018-February-10</span></li>
         <li class="section"><a href="heap.html">A Heap for Proletarians</a> <span class="published">2017-June-22</span></li>
