link to anvetsu blog added.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <a href="about.html" class="mainlink">About</a>&nbsp;&nbsp;&nbsp;
     <a href="https://twitter.com/lispchronicles" target="_blank" class="mainlink">Twitter</a>&nbsp;&nbsp;&nbsp;
     <a href="http://schemer.in" class="mainlink">schemer.in</a>&nbsp;&nbsp;&nbsp;
+    <a href="https://blog.anvetsu.com" class="mainlink">blog.anvetsu.com</a>
       </p>
 
      <p>
