--- a/toss.html
+++ b/toss.html
@@ -50,7 +50,7 @@
       </code></pre>
     </div>
 
-    <h2>Answering Questions</h2>
+    <h2>A Functional Inquiry</h2>
 
     <p>Now we would like to answer some questions about the data gathered from <code>N</code> tosses, like, how many heads were generated
       by the experiment?. The higher-order function <code>reduce</code> can help us here:</p>
