--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
     <p>
       <ul>
+	<li class="section"><a href="toss.html">Partials & Patterns</a>
+          <span class="published">2019-July-10</span></li>
 	<li class="section"><a href="toss.html">Toss them, Coins!</a>
           <span class="published">2019-May-21</span></li>
         <li class="section"><a href="scm.html">An Etude in Minimalism</a>
