--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <p>
       <ul>
-	<li class="section"><a href="toss.html">Partials & Patterns</a>
+	<li class="section"><a href="cut.html">Partials & Patterns</a>
           <span class="published">2019-July-10</span></li>
 	<li class="section"><a href="toss.html">Toss them, Coins!</a>
           <span class="published">2019-May-21</span></li>
