--- a/cut.html
+++ b/cut.html
@@ -41,8 +41,7 @@
       "empty-slots", which can be filled-in later at the time of the final function application.</p>
 
     <p>Let's assume that we have an operator that can construct such no-sequential partials for us.
-      We shall call this abstraction as <code>cut</code> because it knows
-      how to fill in missing values in a segmented argument list. An empty-slot will be
+      We shall call this abstraction as <code>cut</code> because it knows how to deal with segmented argument lists. An empty-slot will be
       represented by the empty vector literal - <code>[]</code>.</p>
 
     <p>First we shall look at a few examples of using <code>cut</code>, then we will look at the actual implementation of this operator.</p>
