--- a/cut.html
+++ b/cut.html
@@ -96,7 +96,7 @@
 
     <h4>Implementation</h4>
 
-    <p>The <code>cut</code> operator is defined as a macro which walks down the partial argument list looking for slots.
+    <p>The <code>cut</code> operator is defined as a macro that walks down the partial argument list looking for slots.
       It constructs a parameter list that contain entries for each slot. An argument list is also prepared with the partial arguments and
       variables from the parameter list inserted at proper order. As the last step, a new function is created which will call the
       partially-applied function with the fully-constructed argument list.</p>
