--- a/cut.html
+++ b/cut.html
@@ -41,7 +41,7 @@
       "empty-slots", which can be filled-in later at the time of the final function application.</p>
 
     <p>Let's assume that we have an operator that can construct such non-sequential partials for us.
-      We shall call this abstraction as <code>cut</code> because it knows how to deal with segmented argument lists. A slot for
+      We shall call this abstraction as <code>cut</code> because it knows how to deal with segmented argument lists. The slot for
       a missing argument will be represented by the pattern <code><></code>.</p>
 
     <p>First we shall look at a few examples of using <code>cut</code>, then we will look at its actual implementation.</p>
